// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton IconButton should render correctly 1`] = `
<styled.button
  aria-disabled={false}
  aria-label="Close"
  as="button"
  className={null}
  disabled={false}
  size="small"
  title="Close"
  type="button"
  variant="primary"
>
  <Icon
    icon="close"
    size="small"
  />
</styled.button>
`;

exports[`IconButton Secondary IconButton should render correctly 1`] = `
<styled.button
  aria-disabled={false}
  aria-label="Close"
  as="button"
  className={null}
  disabled={false}
  size="small"
  title="Close"
  type="button"
  variant="secondary"
>
  <Icon
    icon="close"
    size="small"
  />
</styled.button>
`;
